# TruShell

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  NEW_CONTRIBUTOR_CHECKLIST.md  POSIX_COMPATIBILITY_SPEC.md  README.md  character_ascii.py  chronoterm_project.py  main.py  package-lock.json  package.json  project.py  pyfunny.py  pyproject.toml  settings.py  test_project.py  todos.db
.github/workflows/: python-ci.yml  triage.yml  workflow.yml
atoffice_shell/: database.py  project.py  pyfunny.py
chronoterm/: alarms.py  clock_ascii.py  project.py  shell.py  state.py  timezones.py
examples/plugins/: env_logger.json  env_logger.wat  log_echo.json  log_echo.wat
src/: lib.rs  main.rs  parser.rs  terminal.rs  wasm_host.rs
tests/: conftest.py  posix_compatibility.rs  test_cli.py  test_cli.py.BAK  test_cli_cd.py  test_cli_os_fallback.py  test_data.py  test_database.py  test_help_docs.py  test_nav.py  test_settings.py  test_sound.py  test_state_path.py  wasm_plugin.rs
trushell/: __init__.py  __main__.py  cli.py  project.py  pyfunny.py  sound.py  state.py  todocli.py
trushell/chronoterm/: shell.py  sound.py
trushell/commands/: __init__.py  chronoterm.py  core.py  data.py  editor.py  joke.py  settings.py  tasks.py
trushell/config/: builtin_commands.md  plugins.md
trushell/core/: __init__.py  database.py  settings.py  trukernel.py
trushell/plugins/git_enhancer/: main.py
trushell/utils/: __init__.py  logger.py  manifest_parser.py
